# glue

./: COLLABORATOR_GUIDE.md  CONTRIBUTING.md  Cargo.toml  README.md  install.sh
.circleci/: config.yml
.github/: CODEOWNERS  ISSUE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/signatures/version1/: cla.json
.github/workflows/: CLA.md  cla.yml  pre-release.yml  release.yml
.github/workflows/scripts/: build.sh
crates/gluerunner/: Cargo.toml  cargo.toml
crates/gluerunner/src/: errors.rs  http.rs  lib.rs  runner.rs  stack.rs  utils.rs
crates/gluescript/: Cargo.toml  LICENSE  cargo.toml
crates/gluescript/src/: constants.rs  lib.rs  node.rs  request_body.rs  serialized.rs  utils.rs
crates/gluescript/src/parser/: errors.rs  expression.rs  mask.rs  mod.rs  parser.rs  token.rs
crates/glueshell/: Cargo.toml
crates/glueshell/src/: lib.rs  shell.rs  utils.rs
examples/: README.md  json-selector.glue  nested-request-in-body.glue  nested-request-in-headers.glue  nested-request.glue  raw-json-body.glue  request-with-body.glue  request-with-headers.glue  sequential-requests.glue  simple-request.glue
src/: args.rs  main.rs
src/glue/: constants.rs  mod.rs  runner.rs
src/interpreter/: mod.rs
src/parser/: lib.rs  mod.rs
src/runner/: lib.rs  mod.rs
tests/: node.rs  parser.rs
