[package]
name = "glue"
version = "0.1.0-beta"
edition = "2021"
authors = ["Michele Esposito<michele@esposito.codes>"]

[workspace]
members = [
	"crates/gluescript",
	"crates/gluerunner",
	"crates/glueshell",
]

[dependencies]
clap = { version = "3.2.17", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
gluerunner = { path = "./crates/gluerunner", version = "0.1.0-beta" }
gluescript = { path = "./crates/gluescript", version = "0.1.0-beta" }
glueshell = { path = "./crates/glueshell", version = "0.1.0-beta" }
openssl = { version = "0.10.35", features = ["vendored"] }

[[bin]]
name = "glue"
path = "src/main.rs"