[package]
name = "glue"
version = "0.1.0-beta"
edition = "2021"
authors = ["Michele Esposito<michele@esposito.codes>"]
license-file = "LICENSE"
repository = "https://github.com/mikesposito/glue/"
keywords = [
	"language",
	"cli",
	"http-client",
	"api-client",
	"blazingly-fast",
	"json-selector",
]

[workspace]
members = ["crates/gluescript", "crates/gluerunner", "crates/glueshell"]

[dependencies]
clap = { version = "3.2.17", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
gluerunner = { path = "./crates/gluerunner", version = "0.1.0-beta" }
gluescript = { path = "./crates/gluescript", version = "0.1.0-beta" }
glueshell = { path = "./crates/glueshell", version = "0.1.0-beta" }

[[bin]]
name = "glue"
path = "src/main.rs"
