[package]
name = "glue-cli"
version = "0.1.0"
edition = "2021"
description = "A blazingly fast HTTP client with a magnificent request building syntax, made for humans."
authors = ["mikesposito"]
license-file = "LICENSE"
readme="README.md"
repository = "https://github.com/mikesposito/glue/"
keywords = [
	"language",
	"cli",
	"http-client",
	"api-client",
	"json-selector",
]

[workspace]
members = ["crates/gluescript", "crates/gluerunner", "crates/glueshell"]

[dependencies]
clap = { version = "3.2.17", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
gluerunner = { path = "./crates/gluerunner" }
gluescript = { path = "./crates/gluescript" }
glueshell = { path = "./crates/glueshell" }

[[bin]]
name = "glue"
path = "src/main.rs"
