[package]
name = "gluerunner"
version = "0.1.0"
edition = "2021"
description = "A blazingly fast HTTP client with a magnificent request building syntax, made for humans."
authors = ["mikesposito"]
license-file = "LICENSE"
repository = "https://github.com/mikesposito/glue/"
keywords = [
	"language",
	"cli",
	"http-client",
	"api-client",
	"json-selector",
]

[dependencies]
colored = "2.0.0"
gluescript = { path = "../gluescript" }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
jsonpath-rust = "0.1.6"
serde_json = "1.0.85"