[package]
name = "gluescript"
version = "0.1.0-beta"
edition = "2021"
description = "A blazingly fast HTTP client with a magnificent request building syntax, made for humans."
authors = ["Michele Esposito<michele@esposito.codes>"]
license-file = "LICENSE"
repository = "https://github.com/mikesposito/glue/"
keywords = [
	"language",
	"cli",
	"http-client",
	"api-client",
	"blazingly-fast",
	"json-selector",
]

[dependencies]
colored = "2.0.0"
lazy_static = "1.4.0"
rand = "0.8.4"
regex = "1"
reqwest = { version = "0.11", features = ["json"] }