[package]
name = "glueshell"
version = "0.1.0"
edition = "2021"
description = "A blazingly fast HTTP client with a magnificent request building syntax, made for humans."
authors = ["mikesposito"]
license-file = "LICENSE"
repository = "https://github.com/mikesposito/glue/"
keywords = [
	"language",
	"cli",
	"http-client",
	"api-client",
	"json-selector",
]

[dependencies]
colored = "2.0.0"
gluerunner = { path = "../gluerunner" }
gluescript = { path = "../gluescript" }